--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@
 */
 
 /* Reset */
+   
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
@@ -4429,3 +4430,9 @@
 			}
 
 		}
+	    /* select	option:checked:after { */
+	/*		background: linear-gradient(#d6d6d6, #d6d6d6); */
+		/*	background-color: #d6d6d6 !important; /* for IE */
+		/*	color: #000000;
+		} */
+		
